resources/assets/style.css
*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style-type: none;
}

:root {
    --dark-slate-grey: #003232;
    --black: black;
    --medium-aquamarine: #36b393;
    --medium-spring-green: #46e6aa;
    --white: white;
    --light-grey: #cfcfcf;
    --seashell: #f7f2ec;
    --grey: #797979;
    --white-smoke: #f9f9f9;
    --pale-grey: #f0f0f0;
    --fresh-salmon: #ff8080;
    --light-coral: #66ffd7;

    /* // font-sizes */
    --font-h1: 30px;
    --font-h2: 24px;
    --font-h3: 18px;
    --font-h4: 14px;
    --font-paragraph: 16px;
    --font-small: 14px;
    --font-extra-small: 12px;

    /*font family*/
    --font-heading: bilo, "sans-serif";
    --font-paragraph: canada-type-gibson, "sans-serif";

    /* // spacing */
    --spacing2: 2px;
    --spacing4: 4px;
    --spacing5: 5px;
    --spacing8: 8px;
    --spacing10: 10px;
    --spacing15: 15px;
    --spacing20: 20px;
    --spacing25: 25px;
    --spacing30: 30px;
    --spacing35: 35px;
    --spacing40: 40px;

    /* // Box-shadow */
    --box-shadow: 0 0px 10px rgba(0, 0, 0, 0.05);

    /* // Border-radius */
    --border-radius: 7px;
}

html {
    scroll-behavior: smooth;
    /* background: #003232; */
    background-image: radial-gradient(#094941, #003232);
    height: 100%;
}

h1,
h2,
h3,
h4 {
    font-family: bilo, sans-serif;
    font-weight: 400;
    font-style: normal;
}

p {
    font-family: canada-type-gibson, sans-serif;
    font-weight: 400;
    font-style: normal;
}

/* End of css reset ______________________ */

.webgl {
    position: fixed;
    top: 0;
    left: 0;
    outline: none;
}
.overlay {
    display: none;
}
.frame {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.bottom {
    position: fixed;
    height: 82px;
    width: 100%;
    bottom: 0;
    background-color: var(--white);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px 24px;
}
.bottom .left {
    align-items: center;
    display: flex;
    gap: 54px;
}
.bottom svg {
    font-size: 25px;
}
.bottom p {
    font-size: 32px;
    font-weight: 600;
    width: 105px;
    text-align: center;
    font-family: bilo, sans-serif;
}
.half-circle {
    position: fixed;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    height: 220px;
    width: 55vw;
    background-color: var(--pale-grey);
    border-top-left-radius: 999px;
    border-top-right-radius: 999px;
}

.bottom i {
    font-size: 32px;
}

.tast-logo {
    position: fixed;
    left: 50px;
    top: 50px;
}

#text {
    position: fixed;
    top: 120px;
    left: 50px;
    color: var(--white);
    font-size: 18px;
    line-height: 21px;
    font-weight: 200;
    width: 100%;
    max-width: 376px;
    opacity: 0;
    transition: opacity 0.4s ease-in-out;
    span {
        font-weight: 500;
    }
}

#text.visible {
    opacity: 1;
}

.circle-wrapper {
    position: fixed;
    bottom: 0;
    width: 100vw;
    display: flex;
    justify-content: center;
    #circle {
        left: 50%;
        transform: translateX(-50%);
        width: 20px;
        height: 20px;
        background-color: rgba(255, 255, 255, 0.2);
        border: 1px solid var(--white);
        border-radius: 999px;
        bottom: 0;
        transform: translateY(-35vh);

        display: flex;
        justify-content: center;
        align-items: center;

        /* Voeg een transition toe voor de grootte van circle */
        transition: width 0.3s ease-in-out, height 0.3s ease-in-out,
            transform 0.3s ease-in-out;

        i {
            font-size: 22px;
            transform: scale(0); /* Gebruik scale voor animatie */
            opacity: 0;

            /* Voeg een transition toe voor de transform en opacity */
            transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
            color: var(--white);
        }
    }
}

/* @keyframes shake {
    0%,
    100% {
        transform: translate(0, -38vh);
    }
    20% {
        transform: translate(20px, -38vh);
    }
    40% {
        transform: translate(-20px, -38vh);
    }
    60% {
        transform: translate(25px, -38vh);
    }
    80% {
        transform: translate(-25px, -38vh);
    }
} */
@keyframes shake {
    0%,
    100% {
        transform: translate(0, -38vh);
    }
    2% {
        transform: translate(15px, -38vh);
    }
    4% {
        transform: translate(-15px, -38vh);
    }
    6% {
        transform: translate(15px, -38vh);
    }
    8% {
        transform: translate(0, -38vh);
    }
}
#circle.active {
    width: 52px;
    height: 52px;
    transform: translateY(
        -38vh
    ); /* Oneindige animatie met schudden en wachten */
    animation: shake 10s ease-in-out 3s infinite;

    i {
        transform: scale(1); /* Schaal het pictogram naar normale grootte */
        opacity: 1;
    }
}

#circle.hidden {
    width: 0;
    height: 0;
    border: 0px solid transparent;
    i {
        transform: scale(0); /* Schaal het pictogram naar normale grootte */
        opacity: 0;
    }
}

#block-text {
    position: fixed;
    bottom: 0px;
    left: 50%;
    transform: translate(-50%, -38vh);
    background-color: rgba(255, 255, 255, 0.15);
    border: 1px solid var(--white);
    padding: 20px;
    opacity: 0;
    transition: all 0.2s ease-in-out;
    color: var(--white);
    font-size: 16;
    line-height: 24px;
    text-align: center;

    display: flex;
    flex-direction: column;
    gap: 6px;
    .calendar-text {
        color: var(--dark-slate-grey);
    }
}

#block-text.visible {
    opacity: 1;
}

